--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Grid</title>
 
+    <!--Bootstrap Link & Script-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -17,6 +18,9 @@
 <body>
 
     <div class="container text-center">
+
+        <!--First Row, One Card-->
+
         <div class="row my-4">
             <div class="col-12 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
@@ -27,6 +31,11 @@
                 </div>
             </div>
         </div>
+
+
+
+        <!--Second Row, Three Cards-->
+
         <div class="row my-4 d-flex justify-content-center">
             <div class="col-sm-6 col-lg-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
@@ -53,6 +62,11 @@
                 </div>
             </div>
         </div>
+
+
+
+        <!--Third Row, Four Cards-->
+
         <div class="row my-4">
             <div class="col-sm-6 col-lg-3 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
@@ -87,6 +101,11 @@
                 </div>
             </div>
         </div>
+
+
+
+        <!--Fourth Row, Four Cards-->
+
         <div class="row my-4">
             <div class="col-sm-6 col-lg-3 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
@@ -121,6 +140,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 
 </body>
